--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ input[type="text"]::-webkit-input-placeholder{
   letter-spacing: 0.5px;
 }
 
-#field{
+.field{
+  display: block;
   color: #394e55;
   font-family: 'Montserrat', sans-serif;
   text-align: center;
@@ -29,18 +30,21 @@ input[type="text"]::-webkit-input-placeholder{
   border: 1px solid #394e55;
   transition: .3s box-shadow;
 }
-#field:hover{
-   box-shadow:0 0 4px rgba(0,0,0,0.5);
+.field:hover{
+   box-shadow: 0 0 4px rgba(0,0,0,0.5);
 }
-#field:focus {
+.field:focus {
   outline: none;
+}
+.result{
+  margin-top: 2vh;
 }
 .button {
 	cursor: pointer;
   color: #394e55;
   padding: 15px 30px;
   border: 1px solid #394e55;
-  margin: 10px 20px;
+  margin: 2vh 20px;
 	height: 60px;
 	background-color: #abb4b7;
   font-family: 'Montserrat', sans-serif;
